# dict-typer

./: .example.json  LICENSE  Makefile  README.md  foo.py  pyproject.toml  setup.cfg  test.json
.github/workflows/: test.yml
.hooks/: pre-push
dict_typer/: __init__.py  convert.py  exceptions.py  models.py  type_definitions.py  types.py  utils.py
tests/: test_convert.py
tests/e2e/: test_full.py
tests/integration/: test_json_org_examples.py
tests/integration/fixtures/: README.md  example5.json  sitepoint.com.example1.json  sitepoint.com.example4.json
tests/snapshot/: test_snapshots.py
tests/snapshot/fixtures/: README.md  custom.example1.json  sitepoint.com.example2.json
tests/snapshot/snapshots/: snap_test_snapshots.py
tests/unit/: test_convert.py  test_convert_basics.py  test_convert_dict_in_sequence.py  test_convert_dicts.py  test_convert_imports.py  test_convert_lists.py  test_convert_optional.py  test_convert_renames.py  test_convert_root_list.py  test_convert_set.py  test_convert_tuple.py  test_convert_with_invalid_key_names.py  test_models.py  test_models_typed_definition.py  test_types.py  test_utils.py
