[tool.poetry]
name = "dict-typer"
version = "0.1.0"
description = "A utils package to create TypedDict definitions from a dict instance"
authors = ["Axel <dict.typer@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
ipdb = "^0.13.2"
pdbpp = "^0.10.2"
mypy = "^0.770"
pytest = "^5.4.1"
flake8 = "^3.7.9"
flake8-builtins = "^1.5.2"
flake8-isort = "^2.9.0"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.1.1"
flake8-comprehensions = "^3.2.2"
pytest-clarity = "^0.3.0-alpha.0"

[tool.poetry.scripts]
dt = 'dict_typer:dict_typer'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

