[tool.poetry]
name = "dict-typer"
version = "0.1.9"
description = "A simple library to take data and turn it into python typing definitions."
authors = ["Axel <dict.typer@absalon.is>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ikornaselur/dict-typer"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.1"
rich = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.2"
flake8-comprehensions = "^3.2.2"
flake8-isort = "^3.0.0"
ipdb = "^0.13.2"
isort = "^4.3.21"
mypy = "^0.770"
pdbpp = "^0.10.2"
pytest = "^5.4.1"
pytest-clarity = "^0.3.0-alpha.0"
snapshottest = "^0.5.1"
typing_extensions = "^3.7.4"

[tool.poetry.scripts]
dict-typer = 'dict_typer:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
